feat(admin): add ability to view and change coins balance
